# PsiAgent

./: .env.example  .gitignore  CONFIG.md  README.md  STRUCTURE.md  config.py  main.py  mcp_server.py  pyproject.toml
db/: clinical_data.db  models.py
helpers/: agent.py  prompts.py
main/: app.py  models.py
mcp_server/: server.py
psi-interface/: index.html  package-lock.json  package.json
psi-interface/src/: App.jsx
